fixed header on mobile

--- a/src/styles/index-revamp.css
+++ b/src/styles/index-revamp.css
@@ -142,7 +142,7 @@ a:hover {
 .nav-left {
 	display: flex;
 	align-items: center;
-	gap: 2rem;
+	gap: 1rem;
 }
 
 .nav-left img {
@@ -182,6 +182,15 @@ a:hover {
 	font-size: 1rem;
 }
 
+.dark-mode-btn {
+	background: none;
+	border: none;
+	cursor: pointer;
+	color: white;
+	font-size: 1.5rem;
+	margin-right: 10px;
+
+}
 /* Page wrapper */
 .page {
 	display: block;
@@ -249,6 +258,9 @@ footer {
 		width: 100%;
 		padding: 0 10px;
 	}
+	.nav-right {
+		gap: 0.5rem;
+	}
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -257,6 +269,9 @@ footer {
 	.nav-content {
 		width: 480px;
 		padding: 0 15px;
+	}
+	.nav-right {
+		gap: 0.5rem;
 	}
 }
 
@@ -292,4 +307,7 @@ footer {
 :root.dark input {
 	background-color: #2a2a2a;
 	color: var(--text-color);
+}
+html, body {
+	overflow-x: hidden;
 }
